--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,5 +1,10 @@
-@import './styles/index.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* @import './styles/index.css'; */
 
-html, body, #root {
+html,
+body,
+#root {
 	height: 100%;
 }
